(fix) minor positioning alignment of text with checkboxes

--- a/app/assets/stylesheets/admin/_optionSelect.scss
+++ b/app/assets/stylesheets/admin/_optionSelect.scss
@@ -19,11 +19,9 @@
       margin: 2px 0 0 -27px;
       width: 20px;
       height: 20px;
-     .all {
-       margin-left: 0px !important;
-     }
+      position: relative;
+      top: 5px;
     }
-
   }
 }
 /*
